Bug 197944 - ktorrent crashed on close
Summary: ktorrent crashed on close
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-26 11:01 UTC by Oliver Putz
Modified: 2009-08-17 18:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2009-06-26 11:01:50 UTC
Version:           3.2.2 (using 4.2.4 (KDE 4.2.4), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.28-gentoo-r6

What happened: 
My whole desktop became sluggish (some widgets did not accept clicks any longer, dolphin took several seconds to open the home directory). 
When closing ktorrent before I restarted the computer, ktorrent crashed with the following backtrace:

[Thread debugging using libthread_db enabled]
[New Thread 0x7f3c9c6de750 (LWP 31821)]
[KCrash handler]
#5  0x00007f3c99e6f18c in QMutex::lock (this=0x6c1a90)
    at thread/qmutex.cpp:152
#6  0x00007f3c9c2116fb in bt::Out (arg=<value optimized out>)
    at /var/tmp/portage/net-p2p/ktorrent-3.2.2/work/ktorrent-3.2.2/libbtcore/util/log.cpp:264
#7  0x00007f3c9c211ad4 in QtMessageOutput (type=<value optimized out>, 
    msg=0x6c1a78 "zone still contained 2 blocks")
    at /var/tmp/portage/net-p2p/ktorrent-3.2.2/work/ktorrent-3.2.2/libbtcore/util/log.cpp:288
#8  0x00007f3c99e6c31e in qt_message_output (msgType=QtDebugMsg, 
    buf=0x17 <Address 0x17 out of bounds>) at global/qglobal.cpp:1982
#9  0x00007f3c99e6caed in qDebug (msg=<value optimized out>)
    at global/qglobal.cpp:2068
#10 0x00007f3c9a601af7 in ~KZoneAllocator (this=0x7f3c9b8220b8)
    at /var/tmp/portage/kde-base/kdelibs-4.2.4-r3/work/kdelibs-4.2.4/kdecore/util/kallocator.cpp:110
#11 0x00007f3c985bc198 in __cxa_finalize () from /lib/libc.so.6
#12 0x00007f3c9b39c566 in ?? () from /usr/lib64/libkdeui.so.5
#13 0x0000000000000000 in ?? ()
Comment 1 Joris Guisson 2009-08-17 18:52:39 UTC
SVN commit 1012424 by guisson:

Unset Qt message handler when Log is destroyed, should fix the crash at exit reported in 197944

BUG: 197944

 M  +1 -0      ChangeLog  
 M  +1 -0      libbtcore/util/log.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1012424