Unset Qt message handler when Log is destroyed, should fix the crash at exit reported in 197944

BUG: 197944

svn path=/trunk/extragear/network/ktorrent/; revision=1012424